--- a/style.less
+++ b/style.less
@@ -1,9 +1,9 @@
 /*
-Theme Name: Bestetti Associati
+Theme Name: Theme
 Theme URI: http://underscores.me/
-Author: Sacha Benda
-Author URI: http://www.theblink.ti
-Description: Portfolio Site
+Author:
+Author URI: 
+Description:
 Version: 1.0
 License: GNU General Public License
 License URI: license.txt
@@ -12,7 +12,7 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-bestetti is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
+This theme is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
 
 Resetting and rebuilding styles have been helped along thanks to the fine work of
 Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
@@ -32,8 +32,8 @@ and Blueprint http://www.blueprintcss.org/
 @import url('less/comments.less');
 @import url('less/widgets.less');
 @import url('less/infinite-scroll.less');
-//@import url('less/superslides/superslides.less');
+//@import url('less/superslides/superslides.less'); //uncomment if needed
 
 /*custom*/
 @import url('less/custom.less');
-@import url('less/responsive.less');
+@import url('less/responsive.less'); //(un)comment if needed
